--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,17 @@ body {
     text-wrap: balance;
   }
 }
+
+
+.glass::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('/bg.jpg');
+  filter: blur(8px); /* Adjust the blur intensity as needed */
+  opacity: 0.7; /* Adjust the opacity as needed */
+  z-index: -1;
+}
