Removed unused things

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,7 @@
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
   --primary: #242424;
-  --secondary: #7c7c7c;
+  --secondary: #9b9b9b;
   --tertiary: #7a7a7a;
 }
 
