--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,8 +6,8 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
-  --primary: #242424;
-  --secondary: #9b9b9b;
+  --primary: #000000;
+  --secondary: #383838;
   --tertiary: #7a7a7a;
 }
 
