--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,6 +29,11 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+.hollow{
+  -webkit-text-stroke: 0.5px black; 
+  color: transparent;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
